# ayoa

./: .env.example  .gitignore  CHANGELOG.md  Makefile  PROJECT_SUMMARY.md  README.md  pyproject.toml
core/: __init__.py  cli.py  config.py  llm_client.py
core/agents/: __init__.py  character_agent.py  manager.py
core/api/: __init__.py  server.py
core/engine/: __init__.py  information_router.py  orchestrator.py  rng.py
core/memory/: __init__.py  agent_state.py  store.py  vector.py
core/models/: __init__.py  schemas.py
core/prompts/: character.txt  character_creation.txt  director.txt  storyteller.txt
core/roles/: __init__.py  character.py  director.py  storyteller.py
tests/: __init__.py  conftest.py  test_character_agents.py  test_contracts.py  test_information_routing.py  test_orchestrator.py
